docs: actualizacion incremental por lotes